# shellbar

./: .gitignore  CMakeLists.txt  LICENSE  PKGBUILD  PKGBUILD.aur  PLAN.md  README.md  TODO.md  build-release.sh  index.html  sb_config.c  sb_config.h  sb_indexer.c  sb_indexer.h  sb_preferences_dialog.c  sb_preferences_dialog.h  sb_terminal.c  sb_terminal.h  sb_theme.c  sb_theme.h  sb_toolbar.c  sb_toolbar.h  sb_window.c  sb_window.h  shellbar.c  shellbar.gresource.xml  shellbar.spec
.github/workflows/: release.yml
flatpak/: com.rendergraf.shellbar.yml  io.github.rendergraf.shellbar.desktop  io.github.rendergraf.shellbar.metainfo.xml  io.github.rendergraf.shellbar.yml
homebrew/: shellbar.rb
